feat: add wallet for registed user

--- a/bootstrap-3.3.7/css/custom.css
+++ b/bootstrap-3.3.7/css/custom.css
@@ -46,3 +46,24 @@ margin-right: 2%;
 h5{
 	width: 70%;
 }
+
+.text-align-center {
+	text-align: center;
+}
+
+.text-align-left {
+	text-align: left;
+}
+
+.hide {
+	display: none;
+}
+
+.margin-auto {
+	margin: 0px auto;
+}
+
+.margin-bottom-20px {
+	margin-bottom: 20px;
+}
+
