feat: add back btn in checkout

--- a/shopping-cart/css/checkout_style.css
+++ b/shopping-cart/css/checkout_style.css
@@ -230,3 +230,10 @@ fieldset{
 .form-wrapper input[type="radio"]:checked + label h4{
   color: #3498db;
 }
+
+.btn-back {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+
+}
